[package]
name = "pyranine"
version = "1.0.0"
authors = ["Alexandre Pedroza <pedrozaalexandre@gmail.com>"]
edition = "2018"
description = "A syntax highlighter for the web, based on syntect"
license = "MIT"
repository = "https://github.com/pedrozaalex/pyranine"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = "0.2.63"
syntect = { version = "5.0.0", default-features = false, features = ["default-fancy"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
